user_management: fixed signin form alignment

--- a/django-app/static/css/signin.css
+++ b/django-app/static/css/signin.css
@@ -7,6 +7,7 @@ html,body {
     margin-top: 0 !important;
     padding: 0 !important;
     display: flex;
+    justify-content: center;
     align-items: center;
 }
 
